<resources>
    <string name="app_name">Mathematicals-Expressions-Calculator</string>
    <string name="result">=</string>
    <string name="click_the_button_and_here_you_will_see_the_result_of_the_expression">
        Click the button and here you will see the result of the expression
    </string>
    <string name="enter_a_mathematical_expression">Enter a mathematical expression</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="add">+</string>
    <string name="rem">-</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="prev"></string>
    <string name="brsps"></string>
    <string name="next"></string>
</resources>
